--- a/index.html
+++ b/index.html
@@ -1,29 +1,171 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>اللجنة النقابية - مصر للصيانة</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>اللجنة النقابية - شركة مصر للصيانة</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: #f4f6f8;
+      margin: 0;
+      padding: 0;
+      color: #222;
+    }
+    header {
+      background: #003366;
+      padding: 15px;
+      text-align: center;
+      color: white;
+      font-size: 1.4rem;
+      font-weight: bold;
+    }
+    .logo {
+      max-width: 180px;
+      margin: 10px auto;
+      display: block;
+    }
+    .container {
+      max-width: 900px;
+      margin: 20px auto 40px;
+      padding: 0 15px;
+    }
+    .sections {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      gap: 20px;
+      margin-bottom: 40px;
+    }
+    .section {
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgb(0 0 0 / 0.1);
+      width: 280px;
+      text-align: center;
+      padding: 15px;
+      transition: transform 0.2s ease;
+      cursor: pointer;
+    }
+    .section:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgb(0 0 0 / 0.15);
+    }
+    .section img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-bottom: 15px;
+    }
+    .section h3 {
+      margin: 0 0 12px;
+      font-size: 1.2rem;
+      color: #003366;
+    }
+    .btn-whatsapp {
+      display: inline-block;
+      background-color: #25D366;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 50px;
+      font-weight: 600;
+      text-decoration: none;
+      margin-top: 10px;
+      box-shadow: 0 3px 8px rgb(37 211 102 / 0.5);
+      transition: background-color 0.3s ease;
+    }
+    .btn-whatsapp:hover {
+      background-color: #1ebe5a;
+    }
+    footer {
+      background: #003366;
+      color: white;
+      padding: 25px 15px;
+      text-align: center;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+    }
+    .contact-section {
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgb(0 0 0 / 0.1);
+      max-width: 900px;
+      margin: 0 auto 50px;
+      padding: 25px 15px;
+      text-align: center;
+    }
+    .contact-section h2 {
+      margin-bottom: 20px;
+      color: #003366;
+      font-size: 1.5rem;
+    }
+    .contact-buttons {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+    .contact-buttons a {
+      flex: 1 1 180px;
+      max-width: 220px;
+    }
+    .btn-facebook {
+      background-color: #1877F2;
+      box-shadow: 0 3px 8px rgb(24 119 242 / 0.6);
+    }
+    @media (max-width: 650px) {
+      .sections {
+        flex-direction: column;
+        align-items: center;
+      }
+      .section {
+        width: 90%;
+      }
+      .contact-buttons {
+        flex-direction: column;
+      }
+      .contact-buttons a {
+        max-width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <img src="https://g.top4top.io/p_3436lmuhf1.jpg" alt="شعار اللجنة">
-        <h1>اللجنة النقابية للعاملين بشركة مصر للصيانة</h1>
-    </header>
-    <main>
-        <div class="buttons">
-            <a href="https://e.top4top.io/p_3436trx5w1.jpg" target="_blank" class="btn">أمانة الصندوق</a>
-            <a href="https://f.top4top.io/p_3436gx8ip2.jpg" target="_blank" class="btn">التنظيم</a>
-            <a href="https://g.top4top.io/p_3436u0u793.jpg" target="_blank" class="btn">الخدمات</a>
-            <a href="https://facebook.com/qr?id=100064119966130" target="_blank" class="btn fb">
-                <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="فيسبوك"> فيسبوك
-            </a>
-        </div>
-    </main>
-    <footer>
-        <p>جميع الحقوق محفوظة © اللجنة النقابية للعاملين بشركة مصر للصيانة</p>
-    </footer>
+  <header>
+    اللجنة النقابية للعاملين بشركة مصر للصيانة
+    <img class="logo" src="https://g.top4top.io/p_3436lmuhf1.jpg" alt="شعار اللجنة النقابية" />
+  </header>
+
+  <main class="container">
+    <section class="sections">
+      <div class="section" onclick="window.open('https://f.top4top.io/p_3436gx8ip2.jpg', '_blank')">
+        <img src="https://f.top4top.io/p_3436gx8ip2.jpg" alt="الخدمات" />
+        <h3>الخدمات</h3>
+        <a class="btn-whatsapp" href="https://wa.me/01222938058" target="_blank" rel="noopener">واتساب الخدمات</a>
+      </div>
+      <div class="section" onclick="window.open('https://g.top4top.io/p_3436u0u793.jpg', '_blank')">
+        <img src="https://g.top4top.io/p_3436u0u793.jpg" alt="التنظيم" />
+        <h3>التنظيم</h3>
+        <a class="btn-whatsapp" href="https://wa.me/01117665641" target="_blank" rel="noopener">واتساب التنظيم</a>
+      </div>
+      <div class="section" onclick="window.open('https://e.top4top.io/p_3436trx5w1.jpg', '_blank')">
+        <img src="https://e.top4top.io/p_3436trx5w1.jpg" alt="أمانة الصندوق" />
+        <h3>أمانة الصندوق</h3>
+        <a class="btn-whatsapp" href="https://wa.me/01006773456" target="_blank" rel="noopener">واتساب أمانة الصندوق</a>
+      </div>
+    </section>
+
+    <section class="contact-section" aria-label="التواصل مع اللجنة">
+      <h2>التواصل مع اللجنة</h2>
+      <div class="contact-buttons">
+        <a class="btn-whatsapp" href="https://wa.me/message/Z5GCUOBQCZW2L1?src=qr" target="_blank" rel="noopener">الاستفسارات والتوجيهات</a>
+        <a class="btn-whatsapp" href="https://wa.me/message/Z5GCUOBQCZW2L1?src=qr" target="_blank" rel="noopener">التواصل مع اللجنة</a>
+        <a class="btn-facebook" href="https://facebook.com/qr?id=100064119966130" target="_blank" rel="noopener">صفحة الفيسبوك</a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 اللجنة النقابية للعاملين بشركة مصر للصيانة. جميع الحقوق محفوظة.
+  </footer>
 </body>
 </html>
