--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
     </section>
 
     <section class="contact-section" aria-label="التواصل مع اللجنة">
-      <h2>التواصل مع اللجنة</h2>
+      <h2>خدمة الاستفسار والتوجية</h2>
       <div class="contact-buttons">
         
         </a>
         <a class="btn-whatsapp" href="https://wa.me/message/Z5GCUOBQCZW2L1?src=qr" target="_blank" rel="noopener">
-          <i class="fab fa-whatsapp"></i> التواصل مع اللجنة
+          <i class="fab fa-whatsapp"></i> خدمة الاستفسار والتوجية
         </a>
         <a class="btn-facebook" href="https://facebook.com/qr?id=100064119966130" target="_blank" rel="noopener">
           <i class="fab fa-facebook-f"></i> صفحة الفيسبوك
